<resources>
    <string name="app_name">SellerPlatform</string>
    <string name="action_settings">Settings</string>

    <string name="data_error">数据错误</string>
    <string name="alter_succeed">修改成功</string>


    <!--maintab标签-->
    <string name="tab_dynamic">動態</string>
    <string name="tab_toogle">開關</string>
    <string name="tab_edit">編輯</string>
    <string name="tab_settings">設定</string>

    <!--产品tab标签-->
    <string name="tab_menu">主選單</string>
    <string name="tab_vice">副選單</string>
    <!--动态-->
    <string name="dynamic_notice">通知</string>
    <string name="dynamic_deal">處理</string>
    <string name="dynamic_wait">待取</string>
    <string name="dynamic_end">結束</string>
    <string name="load_more">加載更多</string>
    <string name="no_more_data">暂无更多数据</string>

    <!--登录-->
    <string name="login_submit">登入</string>

    <!--設定-->
    <string name="settings_account_alter">賬戶設定</string>
    <string name="settings_alter">編輯</string>
    <string name="settings_id">ID</string>
    <string name="settings_addr">地址</string>
    <string name="settings_link">聯絡電話</string>
    <string name="settings_onTime">營業時間</string>
    <string name="settings_web">網站</string>
    <string name="settings_remark">備註</string>
    <string name="settings_card">名片訊息</string>

    <string name="settings_merchant_name">店名</string>
    <string name="settings_merchant_name_vice">副標題</string>
    <string name="settings_merchant_save">儲存</string>

    <!--账户-->
    <string name="account_title">賬戶設定</string>
    <string name="merchant_id">ID</string>
    <string name="account_no">登入賬號</string>
    <string name="account_pwd">登入密碼</string>
    <string name="account_update_pwd">更變密碼</string>
    <string name="account_phone">手機號碼</string>
    <string name="account_op_pwd">操作員登入密碼</string>
    <string name="account_tip_one">*設定操作員密碼分享部分權限予夥伴共同管理，使用操作員密碼登入 權限將受若干限制</string>
    <string name="account_tip_two">X賬戶設定\nX變更密碼\nX店家資訊編輯\nX選單菜單編輯</string>
    <string name="account_cancel">取消</string>
    <string name="account_ensure">確認</string>

    <!--變更密碼-->
    <string name="alter_pwd_title">變更密碼</string>
    <string name="alter_pwd_new">新的密碼</string>
    <string name="alter_pwd_repeat">再次填入</string>
    <string name="alter_pwd_null">請填入新密碼</string>
    <string name="alter_confpwd_null">請再次填入密碼</string>
    <string name="alter_confpwd_eror">兩次填入密碼不一致，請核實</string>

    <!--訂單列表-->
    <string name="order_addr">地址:</string>
    <string name="order_remark">備註:</string>
    <string name="order_second">秒鐘前</string>
    <string name="order_minute">分鐘前</string>
    <string name="order_hour">小時前</string>
    <string name="order_day">天前</string>
    <string name="order_month">月前</string>
    <string name="order_year">年前</string>
    <string name="order_total">總計:</string>
    <string name="order_type_out">外帶</string>
    <string name="unit_yuan_text">元</string>

    <string name="order_state_accept">接收</string>
    <string name="order_state_deal">處理</string>
    <string name="order_state_take">待取</string>
    <string name="order_state_unfinish">未完成</string>
    <string name="order_state_finished">已完成</string>
    <string name="order_decline_prefix">剩餘</string>
    <string name="order_decline_suffix_minute">分鐘</string>
    <string name="order_decline_suffix_hour">小時</string>

    <!--编辑菜单-->
    <string name="menu_single_add">新增单品</string>
    <string name="menu_vice_add">新增副选项</string>

    <!--新增单品-->
    <string name="single_title_hint">填入项目名稱</string>
    <string name="single_item_label">款式</string>
    <string name="single_item_name_hint">填入款式名稱</string>
    <string name="single_item_money_hint">填入金额</string>
    <string name="single_item_add">新增款式</string>
    <string name="single_vice_label">副選項問答</string>
    <string name="single_vice_necessary">必選項</string>
    <string name="single_vice_unnecessary">非必選項/加選</string>
    <string name="single_vice_add">加入副選項</string>
    <string name="single_vice_add_title">選擇問答副選項</string>
    <string name="single_cancel">取消</string>
    <string name="single_ensure">確認</string>
    <string name="single_finish">完成</string>
    <string name="single_vice_config_title">選擇問答副選項</string>
    <string name="single_title_null">請填入项目名稱</string>
    <string name="single_item_null">請確保至少包含一項款式</string>

    <!--新增選項-->
    <string name="vice_title_hint">填入選單名稱</string>
    <string name="vice_necessary_label">必選</string>
    <string name="vice_unecessary_label">非必選</string>
    <string name="vice_prefix">總共</string>
    <string name="vice_item_unit">項</string>
    <string name="vice_middlefix">選擇</string>
    <string name="vice_item_label">選項</string>
    <string name="vice_item_name_hint">填入選項名稱</string>
    <string name="vice_item_money_hint">填入金額</string>
    <string name="vice_item_add">新增選項</string>

    <string name="vice_less">至少</string>
    <string name="vice_more">至多</string>
    <string name="vice_one">指定</string>
    <string name="vice_item_null">请确保該選單至少包含一则選項</string>
    <string name="vice_item_more">當前設置的選擇數目大於實際數據數目，請核實</string>

    <string-array name="sort_way">
        <item>不限時手動</item>
        <item>限時1小時</item>
        <item>限時2小時</item>
        <item>限時3小時</item>
        <item>限時4小時</item>
        <item>限時5小時</item>
        <item>限時6小時</item>
        <item>限時7小時</item>
        <item>限時8小時</item>
        <item>限時9小時</item>
        <item>限時10小時</item>
        <item>限時11小時</item>
        <item>限時12小時</item>
    </string-array>


</resources>
