<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@mipmap/page_bg">

    <LinearLayout
        android:paddingTop="@dimen/dp_fifty_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

       android:paddingLeft="@dimen/dp_forty_one"
        android:paddingRight="@dimen/dp_forty_one">

        <TextView
            android:textColor="#5e5e60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:textSize="@dimen/sp_twenty_six" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_fifteen"
            android:paddingRight="@dimen/dp_twenty"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="@dimen/dp_twenty_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black_two"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_nineteen"
                    android:text="@string/merchant_id"/>
                <TextView
                    android:textColor="@color/black_two"
                    android:gravity="center_horizontal"
                    android:id="@+id/user_merchantId_tv"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/sp_nineteen"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/dp_eighteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black_two"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_nineteen"
                    android:text="@string/account_no"/>
                <TextView
                    android:textColor="@color/black_two"
                    android:gravity="center_horizontal"
                    android:id="@+id/user_account_tv"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/sp_nineteen"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/dp_eighteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black_two"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_nineteen"
                    android:text="@string/account_pwd"/>
                <RelativeLayout
                    android:id="@+id/user_update_btn"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">
                    <TextView
                        android:background="@drawable/solid_rounded_box_orange"
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/dp_hundred_eighteen"
                        android:layout_height="@dimen/dp_twenty_eight"
                        android:textSize="@dimen/sp_nineteen"
                        android:gravity="center"
                        android:text="@string/account_update_pwd"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/dp_eighteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black_two"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_nineteen"
                    android:text="@string/account_phone"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/user_phone_tv"
                    android:layout_width="@dimen/dp_zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/sp_nineteen"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginLeft="@dimen/dp_two"
            android:layout_marginTop="@dimen/dp_ninety"
            android:textColor="@color/black_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_op_pwd"
            android:textSize="@dimen/sp_twenty_four" />
        <LinearLayout
            android:layout_marginTop="@dimen/dp_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:focusable="false"
                android:textCursorDrawable="@null"
                android:id="@+id/user_pwd_et"
                android:padding="@dimen/dp_five"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp_twenty"
                android:background="#ebebeb"
                android:textSize="@dimen/sp_sixteen"
                android:textColor="#565656"
                android:text="Sa14b283kk"

               android:layout_marginLeft="@dimen/dp_fifty"
                android:layout_marginRight="@dimen/dp_fifty"/>
            <TextView
                android:layout_marginTop="@dimen/dp_fifteen"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/dp_seventeen"
                android:layout_marginRight="@dimen/dp_seventeen"
                android:text="@string/account_tip_one"
                android:textSize="@dimen/sp_twelve"
                android:lineSpacingMultiplier="1.4"
                android:layout_height="wrap_content" />
                <!--android:lineSpacingExtra="@dimen/dp_two"-->
            <TextView
                android:layout_marginTop="@dimen/dp_seven"
                android:layout_width="wrap_content"
                android:text="@string/account_tip_two"
                android:layout_gravity="center_horizontal"
                android:lineSpacingMultiplier="1.4"
                android:textSize="@dimen/sp_twelve"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/sp_twenty"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/user_cancel_btn"
                android:gravity="center"
                android:textColor="@color/tab_colo_checked"
                android:layout_width="@dimen/dp_sixty_three"
                android:layout_height="@dimen/dp_thirty"
                android:text="@string/account_cancel"
                android:background="@drawable/btn_comment_bg"/>
            <TextView
                android:id="@+id/user_ensure_btn"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp_five"
                android:background="@drawable/btn_special_bg"
                android:layout_width="@dimen/dp_sixty_three"
                android:layout_height="@dimen/dp_thirty"
                android:text="@string/account_ensure"
                android:textSize="@dimen/sp_sixteen"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
