<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/page_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_single_opLayout"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_twenty_two"
            android:paddingRight="@dimen/dp_twenty_two">

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/menu_single_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twenty"
                android:background="#dbdad5"
                android:gravity="center_horizontal"
                android:hint="@string/single_title_hint"
                android:textColorHint="#C3C3C1"
                android:textSize="@dimen/sp_twenty_six" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_sixty"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_item_label"
                    android:textColor="#c5c5c6"
                    android:textSize="@dimen/sp_twenty_four" />

                <ListView
                    android:id="@+id/menu_single_lv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_eight"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="@dimen/dp_thirteen" />

                <LinearLayout
                    android:layout_marginTop="@dimen/dp_nine"
                    android:id="@+id/menu_item_add_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dp_ten"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        android:src="@mipmap/modify_add_small_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_three"
                        android:text="@string/single_item_add"
                        android:textColor="#acacac"
                        android:textSize="@dimen/sp_twelve" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_vice_label"
                    android:textColor="#c6c6c6"
                    android:textSize="@dimen/sp_twenty_four" />

                <LinearLayout
                    android:id="@+id/menu_vice_necessary_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_eleven"
                        android:text="@string/single_vice_necessary"
                        android:textColor="#989899"
                        android:textSize="@dimen/sp_forteen" />

                    <com.templar.sellerplatform.widget.CustomListView
                        android:id="@+id/menu_vice_necessary_lv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_ten"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="@dimen/dp_ten"></com.templar.sellerplatform.widget.CustomListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu_vice_unnecessary_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_eleven"
                        android:text="@string/single_vice_unnecessary"
                        android:textColor="#989899"
                        android:textSize="@dimen/sp_forteen" />

                    <com.templar.sellerplatform.widget.CustomListView
                        android:id="@+id/menu_vice_unnecessary_lv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_ten"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="@dimen/dp_ten"></com.templar.sellerplatform.widget.CustomListView>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/menu_vice_add_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_ten">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        android:src="@mipmap/modify_add_small_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_three"
                        android:text="@string/single_vice_add"
                        android:textColor="#acacac"
                        android:textSize="@dimen/sp_twelve" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/menu_single_opLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_twenty"

        android:layout_marginTop="@dimen/dp_ten"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_single_cancel_btn"
            android:layout_width="@dimen/dp_seventy_seven"
            android:layout_height="@dimen/dp_thirty_four"
            android:background="@drawable/btn_comment_bg"
            android:text="@string/account_cancel"
            android:gravity="center"
            android:textSize="@dimen/sp_sixteen"
            android:textColor="@color/tab_colo_checked" />

        <TextView
            android:id="@+id/menu_single_ensure_btn"
            android:layout_width="@dimen/dp_seventy_seven"
            android:layout_height="@dimen/dp_thirty_four"
            android:layout_marginLeft="@dimen/dp_five"
            android:background="@drawable/btn_special_bg"
            android:text="@string/account_ensure"
            android:gravity="center"
            android:textSize="@dimen/sp_sixteen"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>


